<?xml version="1.0" encoding="utf-8"?><!--

    Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
    and other contributors as indicated by the @author tags.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>

    <string name="application_name" translatable="false">Hawkular</string>

    <string name="button_authorize">Authorize</string>
    <string name="button_retry">Try again</string>

    <string name="error_authorization_host_port">Something is wrong with host or port.</string>
    <string name="error_authorization_port">Should be a correct number.</string>
    <string name="error_empty">Should not be empty.</string>
    <string name="error_general">Something is wrong, please try again.</string>

    <string name="hint_host">Host</string>
    <string name="hint_port">Port</string>

    <string name="label_authorization_description">Please provide the server location. The next step will require the
    credentials.
  </string>
    <string name="label_authorization_title">Authorization using a Hawkular server is necessary.</string>
    <string name="label_authorization_support">The supported Hawkular version is Hawkular-Service 0.32.0.Final.</string>
    <string name="label_availability_up">Up</string>
    <string name="label_availability_down">Down</string>

    <string name="mask_alert_availability">Server was down for %1$d seconds (until %2$s).</string>
    <string name="mask_alert_threshold">Response time was above the threshold (%1$.1f ms) for %2$d seconds (until %3$s).
    The average response time was %4$.1f ms.
  </string>

  <string name="menu_acknowledge">Acknowledge</string>
  <string name="menu_alerts" translatable="false">@string/title_alerts</string>
  <string name="menu_feedback">Help &amp; feedback</string>
  <string name="menu_favourites" translatable="false">@string/title_favourites</string>
  <string name="menu_resolve">Resolve</string>
  <string name="menu_settings" translatable="false">@string/title_settings</string>
  <string name="menu_time">Time</string>
  <string name="menu_time_day">Day</string>
  <string name="menu_time_hour">Hour</string>
  <string name="menu_time_month">Month</string>
  <string name="menu_time_week">Week</string>
  <string name="menu_time_year">Year</string>

  <string name="message_empty">Nothing here</string>
  <string name="message_empty_tip">Well, not yet. Visit the web interface to produce some.</string>
  <string name="message_general">Oops, something went wrong.</string>

  <string name="notification_alert">Some metric is not in the mood.</string>

  <string name="settings_category_account">Account</string>
  <string name="settings_description_account_sign_out">Remove account and start from scratch.</string>
  <string name="settings_title_account_sign_out">Sign Out</string>

  <string name="title_alerts">Alerts</string>
  <string name="title_authorization">Authorization</string>
  <string name="title_metric">Metric</string>
  <string name="title_metrics">Metrics</string>
  <string name="title_resources">Resources</string>
  <string name="title_settings">Settings</string>
  <string name="title_activity_login">Login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="button_login">Login</string>
  <string name="button_QR">Scan QR</string>
  <string name="menu_delete">Delete</string>
  <string name="alert_detail">Alert</string>
  <string name="alert_detail_title">Alert</string>
  <string name="alert_state">State</string>
  <string name="alert_severity">Severity</string>
  <string name="alert_trigger">Trigger</string>
  <string name="alert_state_open">OPEN</string>
  <string name="alert_state_ack">ACKNOWLEDGED</string>
  <string name="alert_state_res">RESOLVED</string>
  <string name="error_later">Please check connection and try later.</string>
  <string name="ic_folder">&#xe09d;</string>
  <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
  <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
  <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
  <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
  <string name="menu_explorer">Explorer</string>
  <string name="menu_favourite">Favourite</string>
  <string name="error_not_found">Please check entered host and port</string>
  <string name="error_internet_connection">Please check your Internet connection.</string>
  <string name="error_unauth">Please enter correct username and password</string>
  <string name="operation_fail">Operation failed. Please try later.</string>
  <string name="operation_success">Operation successful.</string>
  <string name="operation_confirm_title">Confirm to proceed</string>
  <string name="execute">Execute</string>
  <string name="cancel">Cancel</string>
  <string name="search">Search</string>
  <string name="error_websocket_close">WebSocket connection was closed. Cannot send any messages</string>
  <string name="success_websocket_request">Operation request is placed successfully</string>
  <string name="success_websocket_operation_complete">Operation executed successfully</string>
  <string name="fail_websocket_operation_complete">Operation failed. Please try later.</string>
  <string name="menu_add">ADD</string>
  <string name="title_favourites">Favourites</string>
  <string name="hide_resolved">Hide Resolved</string>
  <string name="show_resolved">Show Resolved</string>
  <string name="favourites_added">Added to Favourites</string>
  <string name="favourites_removed">Removed from Favourites</string>
  <string name="trigger_on">Trigger is On</string>
  <string name="trigger_off">Trigger is Off</string>
  <string name="tenantId">Tenant ID</string>
  <string name="hawkular">hawkular</string>
  <string name="id">ID</string>
  <string name="name">Name</string>
  <string name="type">Type</string>
  <string name="eventType">Event Type</string>
  <string name="eventCategory">Event Category</string>
  <string name="eventText">Event Text</string>
  <string name="severity">Severity</string>
  <string name="autoDisable">Auto Disable</string>
  <string name="autoEnable">Auto Enable</string>
  <string name="autoResolveAlerts">Auto Resolve Alerts</string>
  <string name="autoResolve">Auto Resolve</string>
  <string name="autoResolveMatch">Auto Resolve Match</string>
  <string name="enabled">Enabled</string>
  <string name="firingMatch">Firing Match</string>
  <string name="error_agin">Error occered. Please Try again later</string>

  <string-array name="typeEntries">
    <item>STANDARD</item>
    <item>GROUP</item>
    <item>DATA_DRIVEN_GROUP</item>
    <item>MEMBER</item>
    <item>ORPHAN</item>
  </string-array>

  <string-array name="eventTypeEntries">
    <item>ALERT</item>
    <item>EVENT</item>
  </string-array>

  <string-array name="severityEntries">
    <item>LOW</item>
    <item>MEDIUM</item>
    <item>HIGH</item>
    <item>CRITICAL</item>
  </string-array>

  <!-- Drawer Menu -->
  <string name="drawer_menu_favourites">@string/title_favourites</string>
  <string name="drawer_menu_alerts">@string/title_alerts</string>
  <string name="drawer_menu_feedback">Help &amp; feedback</string>
  <string name="drawer_menu_explorer">Explorer</string>
  <string name="drawer_menu_logout">Logout</string>

  <!-- LoginActivity -->
  <string name="logging">Logging in…</string>
  <string name="cannot_be_blank">Cannot be blank</string>


</resources>
