<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
    and other contributors as indicated by the @author tags.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group
    android:id="@+id/menu_group_sections"
    android:checkableBehavior="single">

    <item
      android:id="@+id/menu_favourites"
      android:icon="@drawable/ic_metrics"
      android:title="@string/drawer_menu_favourites"/>

    <item
      android:id="@+id/menu_alerts"
      android:icon="@drawable/ic_alerts"
      android:title="@string/drawer_menu_alerts"/>

  </group>

  <group
    android:id="@+id/menu_group_buttons">

    <item
      android:id="@+id/menu_feedback"
      android:icon="@drawable/ic_feedback"
      android:title="@string/drawer_menu_feedback"/>

    <item
        android:id="@+id/menu_explorer"
        android:icon="@drawable/ic_explore"
        android:title="@string/drawer_menu_explorer"/>

  </group>

  <group
      android:id="@+id/menu_group_login">
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_drawer_logout"
        android:title="@string/drawer_menu_logout"/>
  </group>

</menu>
