<!--

    Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
    and other contributors as indicated by the @author tags.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        layout="@layout/layout_toolbar" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tenantId"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/et_tenant_id"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>



        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:imeOptions="flagNoExtractUi" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/typeSpinner"
                android:entries="@array/typeEntries"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/eventType"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/eventTypeSpinner"
                android:entries="@array/eventTypeEntries"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/severity"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/severitySpinner"
                android:entries="@array/severityEntries"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/autoDisable"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:id="@+id/switch_autoDisable"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/autoEnable"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:id="@+id/switch_autoEnable"
                />

        </TableRow>



        <TableRow
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enabled"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:id="@+id/switch_enabled"
                />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Submit"
        android:layout_marginBottom="20dp"
        android:id="@+id/button_submit"/>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>