<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2015-2016 Red Hat, Inc. and/or its affiliates
    and other contributors as indicated by the @author tags.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical">

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/grid"
      android:padding="10dp"
      android:stretchColumns="1">
    <TableRow>
      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/alert_detail"
          android:paddingRight="20dp"
          android:layout_marginBottom="20dp"/>

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/alert_detail"
          android:layout_weight="1" android:layout_marginBottom="20dp"/>

    </TableRow>

    <TableRow>
      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/alert_state"
          android:paddingRight="20dp"
          android:layout_marginBottom="20dp"/>

      <LinearLayout>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_state_status"
                android:textSize="8sp"/>

      </LinearLayout>

    </TableRow>

    <TableRow>

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/alert_severity"
          android:paddingRight="20dp"
          android:layout_marginBottom="20dp"/>

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/alert_severity"
          android:layout_marginBottom="20dp"/>

    </TableRow>


    <TableRow>

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/alert_trigger"
          android:paddingRight="20dp"
          android:layout_marginBottom="20dp"/>

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/alert_trigger"
          android:layout_marginBottom="20dp"/>

    </TableRow>


  </TableLayout>

  <ListView android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/list"
            android:layout_weight="1"></ListView>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="70dp" android:id="@+id/alert_text">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/alert_note_edit"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="56dp" android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:src="@android:drawable/ic_dialog_email"
        android:id="@+id/alert_fab"/>

  </LinearLayout>
</LinearLayout>
